# capslock_rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  build.rs  capslock_rs.ini
examples/: capslock_rs.example.ini
src/: actions.rs  app.rs  config.rs  gui_settings.rs  hook.rs  i18n.rs  keys.rs  logging.rs  main.rs  startup.rs  tray.rs  win.rs
