[package]
name = "capslock_rs"
version = "0.1.0"
edition = "2021"
authors = ["tuip123 with codex"]
description = "A Windows CapsLock keyboard layer with configurable INI mappings."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
